--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@aws-sdk/util-dynamodb": "^3.303.0",
     "ajv": "^8.12.0",
     "aws-cdk-lib": "2.88.0",
+    "aws-sdk": "^2.1582.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
